@@ -1,0 +1,5 @@
+class Gem::Commands::CrashCommand < Gem::Command
+
+  raise "crash"
+
+end
