@@ -18,6 +18,18 @@ class TestGemCommandManager < RubyGemTestCase
       assert_equal "ERROR:  Interrupted\n", ui.error
     end
   end
+  
+  def test_run_crash_command
+    @command_manager.register_command :crash
+    use_ui @ui do
+      assert_raises MockGemUi::TermError do
+        @command_manager.run 'crash'
+      end
+      assert_equal '', ui.output
+      err = ui.error.split("\n").first
+      assert_equal "ERROR:  Loading command: crash (RuntimeError)", err
+    end
+  end
 
   def test_process_args_bad_arg
     use_ui @ui do
